<resources>
    <string name="app_name">PedraPapelTesoura</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resultado">Resultado</string>
    <string name="start">START</string>
    <string name="_3_players">3 players</string>
    <string name="_2_players">2 players</string>
    <string name="jokenpo">JOKENPO</string>
    <string name="restart">RESTART</string>
    <string name="game_over">GAME OVER</string>
    <string name="n_players">n_players</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="players">Players</string>
    <string name="rounds">Rounds</string>
</resources>