<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.SettingsDialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_top"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?android:attr/actionBarSize"
            android:background="@color/design_default_color_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_gravity="center"
                android:id="@+id/toolbar_title"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/white"/>

        </androidx.appcompat.widget.Toolbar>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_top"
            android:paddingStart="36dp"
            android:paddingEnd="36dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/playersContraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/playersText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/players"
                    android:textStyle="bold"/>

                <com.google.android.material.slider.RangeSlider

                    app:layout_constraintTop_toBottomOf="@id/playersText"
                    android:id="@+id/playerRangeSlider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:valueFrom="1.0"
                    android:valueTo="3.0"
                    android:stepSize="1"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/roundsContraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playersContraintLayout">


                <TextView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/roundsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rounds"
                    android:textStyle="bold"/>

                <com.google.android.material.slider.RangeSlider

                    app:layout_constraintTop_toBottomOf="@id/roundsText"
                    android:id="@+id/roundsRangeSlider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:valueFrom="1.0"
                    android:valueTo="5.0"
                    android:stepSize="2"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveFb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_check_white_24"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>